--- a/css/style.css
+++ b/css/style.css
@@ -143,9 +143,11 @@ body {
     }
 
     header {
+        position: relative;
         height: var(--headerHeight);
-        border-bottom: 4px solid #444;
+        border-bottom: 2px solid #444;
         background-color: #fff;
+        z-index: 4;
     }
 
     header .wrap {
@@ -170,7 +172,7 @@ body {
         box-sizing: content-box;
         height: 187px;
         width: 300px;
-        border: 4px solid #444;
+        border: 2px solid #444;
         border-radius: 40%;
         z-index: -1;
     }
@@ -179,7 +181,7 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        border: 4px solid transparent;
+        border: 2px solid transparent;
         border-radius: 40%;
     }
 
@@ -315,5 +317,28 @@ body {
 
     .banner .slider-wrap .text p {
         margin-top: 20px;
+    }
+}
+
+/* BANNER DESKTOP */
+
+@media (min-width: 1020px) {
+    .banner {
+        height: calc(60vh - var(--headerHeight));
+    }
+
+    .banner .slider-wrap>div {
+        padding-top: 80px;
+    }
+
+    .banner .slider-wrap .text {
+        margin: 0 auto;
+        max-width: 600px;
+        border-width: 1px;
+    }
+
+    .banner button {
+        width: 50px;
+        height: 20%;
     }
 }
