--- a/css/style.css
+++ b/css/style.css
@@ -419,7 +419,7 @@ body {
     flex-wrap: wrap;
     max-width: 1440px;
     text-align: center;
-    padding: 1.5rem 1rem;
+    padding: 0 1rem 1.5rem;
     margin: 0 auto;
     color: #3c2b0c;
     font-family: 'Josefin Sans', sans-serif;
@@ -508,4 +508,38 @@ body {
     .essentials>div {
         padding: 0 1.5rem;
     }
+}
+
+/* BANNER BOTTOM mobile */
+
+.banner-bottom {
+    border-top: 4px solid #3c2b0c;
+    border-bottom: 4px solid #3c2b0c;
+    height: 480px;
+    background-image: url('../images/banner-bottom.jpg');
+    background-size: 300%;
+    background-position: 50% 0%;
+    margin-top: 40px;
+}
+
+@media (min-width: 530px) {
+    .banner-bottom {
+        background-size: 200%;
+    }
+}
+
+@media (min-width: 720px) {
+    .banner-bottom {
+        background-size: 150%;
+    }
+}
+
+@media (min-width: 1240px) {
+    .banner-bottom {
+        background-size: 100%;
+    }
+}
+
+.filler {
+    height: 200vh;
 }
