--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,7 @@ body {
     left: 0;
     transform: translateY(-50%);
     z-index: 3;
+    cursor: pointer;
 }
 
 .banner button.arrow-right {
@@ -531,6 +532,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
+    padding-bottom: 50px;
 }
 
 .contact {
@@ -600,6 +602,7 @@ body {
     font-size: .8rem;
     font-weight: bold;
     cursor: pointer;
+    margin-top: 10px;
 }
 
 .gallery .more:hover {
@@ -645,5 +648,27 @@ body {
 /* FOOTER */
 
 footer {
-    height: 10vh;
+    position: relative;
+    text-align: center;
+    font-size: .6rem;
+    line-height: 300%;
+    background-color: #232323;
+    color: rgb(160, 134, 73);
+}
+
+footer .arrow-up {
+    position: fixed;
+    bottom: 2%;
+    right: 3%;
+    font-size: 1.5rem;
+    background-color: rgb(244, 226, 155);
+    color: #232323;
+    opacity: 0.8;
+    padding: 5px 15px;
+    cursor: pointer;
+    transition: .2s;
+}
+
+footer .arrow-up:hover {
+    box-shadow: 0 0 2px 4px white;
 }
